[package]
name = "rtk_1ns570_rs"
version = "0.1.0"
authors = ["YdrMaster <ydrml@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
windows = "*"
nix = "*"
num-traits = "*"
chrono = "*"
