[package]
name = "rtk-ins570-rs"
version = "0.1.0"
authors = ["YdrMaster <ydrml@hotmail.com>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial-port = { path = "../serial-port" }
num-traits = "*"
chrono = "*"
